[gd_scene load_steps=12 format=3 uid="uid://cmolmb4vvryp0"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_vvxnn"]
[ext_resource type="Script" path="res://Scripts/WeaponController.gd" id="2_b5j13"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing.gd" id="3_ew72p"]
[ext_resource type="PackedScene" uid="uid://cscogdcs4a472" path="res://models/view_arms.glb" id="4_lsgbd"]
[ext_resource type="ArrayMesh" uid="uid://beqpuhy7ayq7r" path="res://models/exported/Freeze_Ray.res" id="5_5jvg5"]

[sub_resource type="Animation" id="Animation_xbd82"]
resource_name = "w_freeze_ray"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponController")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"FireCurrentWeapon"
}]
}

[sub_resource type="Animation" id="Animation_0rc0x"]
resource_name = "w_hand"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponController")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"FireCurrentWeapon"
}]
}

[sub_resource type="Animation" id="Animation_ygai1"]
resource_name = "w_maxwell"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponController")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"FireCurrentWeapon"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cihvu"]
_data = {
"w_freeze_ray": SubResource("Animation_xbd82"),
"w_hand": SubResource("Animation_0rc0x"),
"w_maxwell": SubResource("Animation_ygai1")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_02w5n"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xilu7"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath("Smoothing/Neck/Camera3D:rotation")
properties/2/spawn = true
properties/2/sync = true
properties/3/path = NodePath("Smoothing/Neck:rotation")
properties/3/spawn = true
properties/3/sync = true

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 8
script = ExtResource("1_vvxnn")

[node name="WeaponController" type="Node" parent="."]
script = ExtResource("2_b5j13")

[node name="WeaponFire" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cihvu")
}

[node name="PlayerSound" type="AudioStreamPlayer3D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1600, 900)
render_target_update_mode = 4

[node name="ViewModelCamera" type="Camera3D" parent="CanvasLayer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.465, 0)
cull_mask = 2
fov = 90.0

[node name="Smoothing" type="Node3D" parent="."]
script = ExtResource("3_ew72p")
flags = 55

[node name="Neck" type="Node3D" parent="Smoothing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.465, 0)

[node name="Camera3D" type="Camera3D" parent="Smoothing/Neck"]
cull_mask = 1048025
fov = 90.0

[node name="view_arms" parent="Smoothing/Neck/Camera3D" instance=ExtResource("4_lsgbd")]
transform = Transform3D(-0.3, 0, 2.62268e-08, 0, 0.3, 0, -2.62268e-08, 0, -0.3, 0, -0.6, 0)

[node name="Skeleton3D" parent="Smoothing/Neck/Camera3D/view_arms/Armature" index="0"]
bones/1/rotation = Quaternion(-0.0343111, -0.063773, -0.472555, 0.878321)
bones/2/rotation = Quaternion(0.0488114, 0.0367617, 0.471278, 0.879865)
bones/3/rotation = Quaternion(-6.69065e-09, -6.33299e-08, 7.3244e-08, 1)
bones/4/rotation = Quaternion(3.19547e-09, 5.21541e-08, 5.19376e-08, 1)
bones/5/rotation = Quaternion(0.705772, -1.23806e-07, -0.043423, 0.707107)
bones/6/rotation = Quaternion(0.0424748, -0.0770578, 0.480859, 0.872372)
bones/7/rotation = Quaternion(-0.0846202, 2.76493e-08, -0.475257, 0.875769)
bones/8/rotation = Quaternion(3.85465e-09, 1.86265e-08, 2.16491e-08, 1)
bones/9/rotation = Quaternion(-1.16093e-08, 4.84288e-08, -6.52019e-08, 1)

[node name="Cube" parent="Smoothing/Neck/Camera3D/view_arms/Armature/Skeleton3D" index="0"]
layers = 2

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Smoothing/Neck/Camera3D/view_arms/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.998113, 3.20375e-07, -0.061409, -0.061409, 5.21233e-07, -0.998113, -2.75671e-07, 1, 5.59026e-07, 0.711205, 2.9, 2.38698e-08)
bone_name = "rightarmweapon"
bone_idx = 5
use_external_skeleton = true
external_skeleton = NodePath("..")

[node name="WeaponModel" type="MeshInstance3D" parent="Smoothing/Neck/Camera3D/view_arms/Armature/Skeleton3D/BoneAttachment3D"]
transform = Transform3D(1, 7.45058e-09, 0, 1.11759e-08, 1, -1.49012e-08, 0, 0, 1, 0, 0, 0)
layers = 2
mesh = ExtResource("5_5jvg5")

[node name="SoundHolder" type="Node3D" parent="Smoothing/Neck/Camera3D"]

[node name="PlayerModel" type="Node3D" parent="Smoothing/Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.465, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_02w5n")

[node name="Aim" type="Node3D" parent="."]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xilu7")

[editable path="Smoothing/Neck/Camera3D/view_arms"]
